[package]
name = "ancomplex"
version = "0.0.1"
edition = "2021"
rust-version = "1.64"
authors = ["Ilya"]
license = "MIT"
description = "Package provides complex numbers and operation with self"

keywords = ["complex", "complex-number", "num-complex"]
categories = ["mathematics", "science"]

[dependencies]
num-traits = "0.2.19"
